2024-01-07T08:07:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7436975958 # 1
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 5 7
* notice: prev accum: outdated-unq outdated-all / unq all: 150 214 / 151 215
* notice: next accum: outdated-unq outdated-all / unq all: 151 215 / 157 222
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2023-10-20] / [2023-12-25 2023-12-31 2024-01-01 2024-01-07]

2023-10-27T08:07:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6664575621 # 1321
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 149 213 / 151 215
* notice: next accum: outdated-unq outdated-all / unq all: 150 214 / 151 215
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-13] / []

2023-10-24T08:08:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6624066053 # 1312
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 148 211 / 151 215
* notice: next accum: outdated-unq outdated-all / unq all: 149 213 / 151 215
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-10] / []

2023-10-20T08:07:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6585080628 # 1300