@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-07T08:07:35Z",
-  "count_outdated" : 215,
-  "uniques_outdated" : 151,
+  "timestamp" : "2024-01-08T00:30:46Z",
+  "count_outdated" : 216,
+  "uniques_outdated" : 152,
   "count" : 222,
   "uniques" : 157,
   "clones" : [
-    {
-      "timestamp": "2023-12-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-31T00:00:00Z",
       "count": 1,
